tests/snapshots/erroneous__erroneous@method_call__no_args_given.sk.snap
---
source: tests/erroneous.rs
expression: result
input_file: tests/erroneous/method_call/no_args_given.sk
---
Object#puts takes 1 args but got 0
