tests/snapshots/erroneous__erroneous@method_call__semicolon_within_parentheses4.sk.snap
---
source: tests/erroneous.rs
expression: compiler_output
input_file: tests/erroneous/method_call/semicolon_within_parentheses4.sk
---
Error: unexpected token: Semicolon
   ╭─[tests/erroneous/method_call/semicolon_within_parentheses4.sk:7:17]
   │
 7 │ Test.new.foo(1,2;)
   │                 ─  
   │                     
───╯
)
